--- a/style.css
+++ b/style.css
@@ -6,59 +6,27 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #424E61;
+    background-color: #212224;
     color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 24px 0;
+    font-size: 24px;
 }
 
 .cabecalho-imagem{
-    width: 10%;
+    width: 25%;
+    width: 25%;
 }
 
 .cabecalho-lista-item{
     display: inline-block;
+    margin: 0 32px;
+    font-size: 32px;
+}
+
+* {
     margin: 0 16px;
-    font-size: 16px;
-}
-
-.escola-imagem{
-    width: 25%;
-}
-
-.escola{
-    background-image: linear-gradient(#424E61,#16CFF8);
-    color:white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding: 24px 0;
-}
-
-.escola-div-conteudo{
-    width: 35%;
-}
-
-
-.escola-titulo{
-    padding: 24px 0;
-}
-
-.estudante{
-    padding: 24px 0;
-}
-.estudante-imagem{
-    width: 120px;
-}
-
-.estudante-icone{
-    width: 24px;
-    padding: 4px 8px;
-}
-
-.estudante-div{
-    text-align: center;
-    padding: 16px 0;
-}
+    }
